# llm-zoomcamp

./:  persistent_rag_ingest.ipynb  .gitignore  README.md  faq.db  module-01-agentic-rag-notebook.ipynb  pyproject.toml
01-agentic-rag/: agents.ipynb  homework.ipynb  homework_rag_helper.py  persinsent_rag.ipynb
02-vector-search/: notebook.ipynb  vector_search.ipynb  vector_search_persistent.ipynb  vector_search_pgvector.ipynb
02-vector-search/homework/: homework.ipynb  pyproject.toml
02-vector-search/onnx/: onnx.ipynb  pyproject.toml
